--- a/trading-view.html
+++ b/trading-view.html
@@ -22,7 +22,7 @@
   "blockColor": "change",
   "locale": "en",
   "symbolUrl": "",
-  "colorTheme": "dark",
+  "colorTheme": "light",
   "hasTopBar": true,
   "isDataSetEnabled": true,
   "isZoomEnabled": true,
