Fixed majority of the main views such as charts, market watch and a brief over view. PLease move the 3 bottom most widgets to the right side and make it flush with the bottom of the other widgets.

--- a/mission-statement.html
+++ b/mission-statement.html
@@ -1,11 +1,24 @@
 ﻿<!DOCTYPE html>
 
-<html lang="en" xmlns="http://www.w3.org/1999/xhtml">
+<html lang="en-us">
 <head>
     <meta charset="utf-8" />
     <title></title>
 </head>
 <body>
+    <p>
+        At International Bits, our mission is to bridge the gap in financial literacy among the younger generation by providing accessible and engaging resources to learn about the stock market. Through the development of our paper stock trading app, we aspire to empower young individuals with the knowledge, skills, and confidence to navigate the complexities of the financial world.
 
+        We recognize the importance of early financial education in shaping lifelong habits and fostering economic empowerment. Our app serves as a platform for hands-on learning, where users can explore the dynamics of stock trading in a risk-free environment. By leveraging real-time market data and interactive simulations, we aim to demystify the stock market and cultivate a generation of informed investors.
+
+        As a group where half of the team are immigrants, we understand the financial hardships early in our lives. Coming from Ghana, Iraq and the Philippines some of our team members immigrated to the United States of America in search of the American dream. Only to experience the means of survival with the limited financial resources we were initially given. Growing up, the goal was to make money to put food on the table. It is our belief that our application can end that era to provide young adults to learn how to invest early on to bring fruit to future generations.
+
+        Beyond mere transactions, our app is designed to instill critical thinking, analytical skills, and responsible investing practices. Through curated educational content, tutorials, and community forums, we seek to nurture a culture of continuous learning and collaboration among our users.
+
+        As a team of dedicated students and innovators, we are committed to advancing financial literacy initiatives and promoting equitable access to financial opportunities. We envision a future where every young person has the tools and resources to build a solid foundation for financial success.
+
+        Together, we embark on a journey to empower the next generation to take control of their financial futures, one trade at a time.
+
+    </p>
 </body>
 </html>
