--- a/trading-view.html
+++ b/trading-view.html
@@ -1,6 +1,6 @@
 ﻿<!DOCTYPE html>
 
-<html lang="en" xmlns="http://www.w3.org/1999/xhtml">
+<html lang="en-us">
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content= "IE=edge">
@@ -22,7 +22,7 @@
   "blockColor": "change",
   "locale": "en",
   "symbolUrl": "",
-  "colorTheme": "light",
+  "colorTheme": "dark",
   "hasTopBar": true,
   "isDataSetEnabled": true,
   "isZoomEnabled": true,
