This is the most updated version as of 5/20/24

--- a/homepage.html
+++ b/homepage.html
@@ -14,7 +14,6 @@
     <nav class="navbar">
         <ul>
             <li><a href="chart-view.html">Chart View<span></span></a></li>
-            <li><a href="mission-statement.html">Mission Statement<span></span></a></li>
             <li><a href="crypto-view.html">CryptoCurrency View<span></span></a></li>
             <li><a href="trading-view.html">Fortune 500<span></span></a></li>
             <li><a href="tutorial.html">How to Invest<span></span></a></li>
@@ -206,7 +205,51 @@
 }</script>
     </div>
     <!-- TradingView Widget END -->
+    <footer>
+        <div class="footer-container">
+            <ul class="footer-links">
+                <li><a href="mission-statement.html">Mission Statement</a></li>
 
+            </ul>
+            <p>
+                &copy; 2024 Stock and Crypto Market Guide -
+                Brought to you by: International Bits and Sound Credit Union -
+                Powered by TradingView
+            </p>
+        </div>
+    </footer>
+    <style>
+        footer {
+            background: black;
+            color: white;
+            text-align: center;
+            padding: 10px 0;
+            margin-top: 20px;
+        }
 
+        .footer-container {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+
+        .footer-links {
+            list-style: none;
+            padding: 0;
+            display: flex;
+            justify-content: center;
+            margin-bottom: 10px;
+        }
+
+            .footer-links li {
+                margin: 0 10px;
+            }
+
+            .footer-links a {
+                color: white;
+                text-decoration: none;
+                font-size: 16px;
+            }
+    </style>
 </body>
 </html>
