--- a/Tutorial.html
+++ b/Tutorial.html
@@ -1,11 +1,225 @@
 ﻿<!DOCTYPE html>
-
-<html lang="en-us">
+<html lang="en">
 <head>
-    <meta charset="utf-8" />
-    <title>How to start Investing</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>How the Stock and Crypto Markets Work</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            line-height: 1.6;
+            margin: 0;
+            padding: 0;
+            background-color: #003366;
+            scroll-behavior: smooth;
+        }
+
+        .container {
+            width: 80%;
+            margin: auto;
+            overflow: hidden;
+        }
+
+        header {
+            background: #89CFF0;
+            color: black;
+            padding-top: 10px;
+            min-height: 70px;
+            border-bottom: #0779e4 3px solid;
+            position: fixed;
+            width: 100%;
+            top: 0;
+            z-index: 1000;
+        }
+
+            header a {
+                color: black;
+                text-decoration: none;
+                text-transform: uppercase;
+                font-size: 16px;
+            }
+
+            header ul {
+                padding: 0;
+                list-style: none;
+                text-align: center;
+            }
+
+            header li {
+                display: inline;
+                padding: 0 20px 0 20px;
+            }
+
+        .main {
+            padding: 100px 20px 20px 20px;
+            background: #fff;
+            margin-top: 20px;
+        }
+
+        .section {
+            margin-bottom: 20px;
+            padding-top: 20px;
+        }
+
+            .section h2 {
+                border-bottom: #0779e4 2px solid;
+                padding-bottom: 10px;
+            }
+
+        footer {
+            background: #89CFF0;
+            color: black;
+            text-align: center;
+            padding: 10px 0;
+            margin-top: 20px;
+        }
+    </style>
 </head>
 <body>
+    <header>
+        <div class="container">
+            <h1>How the Stock and Crypto Markets Work</h1>
+            <ul>
+                <li><a href="#stock-market">What is the Stock Market</a></li>
+                <li><a href="#how-it-works">How It Works</a></li>
+                <li><a href="#when-to-buy-sell">When to Buy and Sell</a></li>
+                <li><a href="#earnings-calendar">Earnings Calendar</a></li>
+                <li><a href="#crypto-market">Crypto Market</a></li>
+            </ul>
+        </div>
+    </header>
+
+    <div class="container main">
+        <section id="stock-market" class="section">
+            <h2>What is the Stock Market</h2>
+            <p>The stock market is a platform where shares of publicly traded companies are issued, bought, and sold. It serves as a marketplace where investors can trade ownership in companies. The main functions of the stock market include:</p>
+            <ul>
+                <li><strong>Capital Raising:</strong> Companies raise capital by issuing shares to the public through Initial Public Offerings (IPOs).</li>
+                <li><strong>Liquidity:</strong> The stock market provides a liquid environment where investors can buy and sell shares easily.</li>
+                <li><strong>Price Discovery:</strong> Stock prices are determined by supply and demand dynamics in the market, reflecting the value of companies based on investor perceptions and market conditions.</li>
+                <li><strong>Regulation and Protection:</strong> Stock exchanges and regulatory bodies like the SEC ensure fair trading practices and protect investors.</li>
+            </ul>
+            <p>Stock markets are typically divided into primary and secondary markets. The primary market is where new issues are sold to investors for the first time, while the secondary market is where previously issued securities are traded among investors.</p>
+        </section>
+
+        <section id="how-it-works" class="section">
+            <h2>How the Stock Market Works</h2>
+            <p>At its core, the stock market operates through a network of exchanges such as the New York Stock Exchange (NYSE) and NASDAQ. Companies list their shares on these exchanges through a process called an Initial Public Offering (IPO).</p>
+            <p>Investors can then buy and sell these shares through stockbrokers. Prices of stocks fluctuate based on supply and demand, investor sentiment, and other market factors.</p>
+            <h3>Key Concepts</h3>
+            <ul>
+                <li><strong>Shares:</strong> Units of ownership in a company.</li>
+                <li><strong>Dividends:</strong> Portions of a company's earnings distributed to shareholders.</li>
+                <li><strong>Bull Market:</strong> A market condition where prices are rising or expected to rise.</li>
+                <li><strong>Bear Market:</strong> A market condition where prices are falling or expected to fall.</li>
+            </ul>
+        </section>
+
+        <section id="when-to-buy-sell" class="section">
+            <h2>When to Buy and Sell Stock</h2>
+            <h3>When to Buy</h3>
+            <ul>
+                <li><strong>Buy Low, Sell High:</strong> Look for undervalued stocks with strong growth potential. Use financial metrics like P/E ratio to identify such stocks.</li>
+                <li><strong>Fundamental Analysis:</strong> Buy when a company's financial health (e.g., earnings, revenue, debt levels) and future prospects look strong. Look for solid earnings growth, a strong balance sheet, and competitive advantages.</li>
+                <li><strong>Technical Analysis:</strong> Buy based on historical price movements and market trends. Look for patterns such as support and resistance levels, moving averages, and technical indicators like the RSI (Relative Strength Index).</li>
+                <li><strong>Economic Indicators:</strong> Buy when economic indicators (e.g., GDP growth, low unemployment) suggest a healthy economy, as this often supports a bull market.</li>
+                <li><strong>Market Sentiment:</strong> Buy during periods of optimism and positive sentiment in the market.</li>
+            </ul>
+            <h3>How to Buy</h3>
+            <ul>
+                <li><strong>Open a Brokerage Account:</strong> Choose a reputable broker (e.g., Fidelity, Schwab, Robinhood) and open an account.</li>
+                <li><strong>Research Stocks:</strong> Use tools and resources from financial news websites (e.g., Yahoo Finance, MarketWatch) and analyst reports to research stocks.</li>
+                <li><strong>Place an Order:</strong> Use your brokerage platform to place a market order (buy at current price) or a limit order (buy at a specific price).</li>
+            </ul>
+            <h3>When to Sell</h3>
+            <ul>
+                <li><strong>Target Price:</strong> Sell when the stock reaches your predetermined target price based on your investment goals.</li>
+                <li><strong>Fundamental Changes:</strong> Sell if the company's fundamentals deteriorate (e.g., declining earnings, increasing debt) or if it faces significant challenges (e.g., loss of market share).</li>
+                <li><strong>Portfolio Rebalancing:</strong> Sell to diversify or rebalance your investment portfolio to maintain desired asset allocation.</li>
+                <li><strong>Profit Taking:</strong> Sell to lock in profits after a significant price increase, especially if the stock seems overvalued.</li>
+                <li><strong>Stop-Loss Order:</strong> Set a stop-loss order to sell automatically if the stock price falls to a certain level, limiting potential losses.</li>
+            </ul>
+            <h3>How to Sell</h3>
+            <ul>
+                <li><strong>Evaluate Your Portfolio:</strong> Regularly review your portfolio to determine which stocks to sell based on performance and goals.</li>
+                <li><strong>Place an Order:</strong> Use your brokerage platform to place a market order (sell at current price) or a limit order (sell at a specific price).</li>
+            </ul>
+        </section>
+
+        <section id="earnings-calendar" class="section">
+            <h2>Earnings Calendar</h2>
+            <p>An earnings calendar is a schedule of when companies will release their earnings reports. These reports provide detailed information on a company’s financial performance over a specific period, usually a quarter or a year. Earnings reports can significantly impact stock prices as they offer insights into a company's profitability and future prospects.</p>
+            <h3>Where to Find Earnings Calendars</h3>
+            <ul>
+                <li><a href="https://www.nasdaq.com/market-activity/earnings" target="_blank">NASDAQ Earnings Calendar</a></li>
+                <li><a href="https://www.nyse.com/earnings" target="_blank">NYSE Earnings Calendar</a></li>
+                <li><a href="https://www.marketwatch.com/tools/earnings-calendar" target="_blank">MarketWatch Earnings Calendar</a>
+            </ul>
+        </section>
+        <section id="crypto-market" class="section">
+            <h2>How the Cryptocurrency Market Works</h2>
+            <p>The cryptocurrency market operates similarly to the stock market but involves digital currencies like Bitcoin, Ethereum, and many others. Cryptocurrencies are decentralized and typically use blockchain technology to secure transactions.</p>
+            <h3>Key Concepts in Cryptocurrency</h3>
+            <ul>
+                <li><strong>Blockchain:</strong> A decentralized ledger that records all transactions across a network of computers.</li>
+                <li><strong>Bitcoin:</strong> The first and most widely recognized cryptocurrency.</li>
+                <li><strong>Altcoins:</strong> Any cryptocurrency other than Bitcoin, such as Ethereum, Litecoin, and Ripple.</li>
+                <li><strong>Wallet:</strong> A digital tool that allows you to store and manage your cryptocurrencies.</li>
+            </ul>
+            <h3>Buying and Selling Cryptocurrency</h3>
+            <ul>
+                <li><strong>Exchanges:</strong> Platforms where you can buy, sell, and trade cryptocurrencies (e.g., Coinbase, Binance).</li>
+                <li><strong>Market Orders:</strong> Buying or selling at the current market price.</li>
+                <li><strong>Limit Orders:</strong> Setting a specific price at which you want to buy or sell.</li>
+            </ul>
+            <h3>When to Buy Cryptocurrency</h3>
+            <ul>
+                <li><strong>Market Trends:</strong> Buy when the market shows a clear upward trend or when major positive news about a cryptocurrency is released.</li>
+                <li><strong>Technical Analysis:</strong> Use chart patterns and technical indicators to identify buying opportunities.</li>
+                <li><strong>Dollar-Cost Averaging:</strong> Regularly invest a fixed amount in cryptocurrency to mitigate the impact of volatility.</li>
+            </ul>
+            <h3>When to Sell Cryptocurrency</h3>
+            <ul>
+                <li><strong>Profit Targets:</strong> Sell when your investment reaches a predetermined profit level.</li>
+                <li><strong>Market Sentiment:</strong> Sell during periods of excessive hype or when you anticipate a market correction.</li>
+                <li><strong>Stop-Loss Orders:</strong> Set stop-loss orders to limit potential losses by automatically selling if the price drops to a certain level.</li>
+            </ul>
+            <h3>Risks and Considerations</h3>
+            <ul>
+                <li>Cryptocurrency prices are highly volatile and can fluctuate widely in short periods.</li>
+                <li>Regulatory changes can impact the value and legality of certain cryptocurrencies.</li>
+                <li>Security is crucial; always use reputable exchanges and secure your digital wallets properly.</li>
+            </ul>
+        </section>
+    </div>
+
+    <footer>
+        <p>&copy; 2024 Stock and Crypto Market Guide -
+        Brought to you by: International Bits and Sound Credit Union -
+        Powered by TradingView</p>
+    </footer>
+
+    <
+    <script>
+        document.addEventListener('DOMContentLoaded', function () {
+            const headerHeight = document.querySelector('header').offsetHeight; // Dynamic calculation of header height
+            const headerLinks = document.querySelectorAll('header a');
+
+            headerLinks.forEach(link => {
+                link.addEventListener('click', function (event) {
+                    event.preventDefault();
+                    const targetId = this.getAttribute('href').substring(1);
+                    const targetSection = document.getElementById(targetId);
+                    const offsetTop = targetSection.offsetTop - headerHeight; // Uses dynamically calculated header height
+
+                    window.scrollTo({
+                        top: offsetTop,
+                        behavior: 'smooth'
+                    });
+                });
+            });
+        });
+    </script>
 
 </body>
 </html>
