--- a/homepage.html
+++ b/homepage.html
@@ -1,225 +1,246 @@
 ﻿<!DOCTYPE html>
 
 <html lang="en-us">
+
 <head>
-    <meta charset="utf-8" />
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Chart View</title>
-    <link href="Style1.css" rel="stylesheet" />
+  <meta charset="utf-8" />
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Chart View</title>
+  <link href="Style1.css" rel="stylesheet" />
 </head>
+
 <body>
+  <header>
     <h1> International Bits Partnered with Sound Credit Union</h1>
     <nav class="navbar">
-        <ul>
-            <li><a href="chart-view.html">Chart View<span></span></a></li>
-            <li><a href="crypto-view.html">CryptoCurrency View<span></span></a></li>
-            <li><a href="trading-view.html">Fortune 500<span></span></a></li>
-            <li><a href="tutorial.html">How to Invest<span></span></a></li>
+      <ul>
+        <li><a href="chart-view.html">Chart View<span></span></a></li>
+        <li><a href="crypto-view.html">CryptoCurrency View<span></span></a></li>
+        <li><a href="trading-view.html">Fortune 500<span></span></a></li>
+        <li><a href="tutorial.html">How to Invest<span></span></a></li>
 
-        </ul>
+      </ul>
     </nav>
-    <!-- TradingView Widget BEGIN -->
-    <div class="tradingview-widget-container">
+  </header>
+  <!-- TradingView Widget BEGIN -->
+  <main class="parent">
+    <div class="content child">
+      <div class="tradingview-widget-container">
         <div class="tradingview-widget-container__widget"></div>
-        <script type="text/javascript" src="https://s3.tradingview.com/external-embedding/embed-widget-ticker-tape.js" async>
-  {
-  "symbols": [
-    {
-      "proName": "FOREXCOM:SPXUSD",
-      "title": "S&P 500 Index"
-    },
-    {
-      "proName": "FOREXCOM:NSXUSD",
-      "title": "US 100 Cash CFD"
-    },
-    {
-      "proName": "FX_IDC:EURUSD",
-      "title": "EUR to USD"
-    },
-    {
-      "proName": "BITSTAMP:BTCUSD",
-      "title": "Bitcoin"
-    },
-    {
-      "proName": "BITSTAMP:ETHUSD",
-      "title": "Ethereum"
-    }
-  ],
-  "showSymbolLogo": true,
-  "isTransparent": false,
-  "displayMode": "regular",
-  "colorTheme": "dark",
-  "locale": "en"
-}
-        </script>
-    </div>
-    <!-- TradingView Widget END -->
-    <!-- TradingView Widget BEGIN -->
-    <div class="tradingview-chartWidget-container" style="height:100%;width:70%">
+        <script type="text/javascript" src="https://s3.tradingview.com/external-embedding/embed-widget-ticker-tape.js"
+          async>
+            {
+              "symbols": [
+                {
+                  "proName": "FOREXCOM:SPXUSD",
+                  "title": "S&P 500 Index"
+                },
+                {
+                  "proName": "FOREXCOM:NSXUSD",
+                  "title": "US 100 Cash CFD"
+                },
+                {
+                  "proName": "FX_IDC:EURUSD",
+                  "title": "EUR to USD"
+                },
+                {
+                  "proName": "BITSTAMP:BTCUSD",
+                  "title": "Bitcoin"
+                },
+                {
+                  "proName": "BITSTAMP:ETHUSD",
+                  "title": "Ethereum"
+                }
+              ],
+                "showSymbolLogo": true,
+                  "isTransparent": false,
+                    "displayMode": "regular",
+                      "colorTheme": "dark",
+                        "locale": "en"
+            }
+          </script>
+      </div>
+      <!-- TradingView Widget END -->
+      <!-- TradingView Widget BEGIN -->
+      <div class="tradingview-chartWidget-container" style="height:100%;width:70%">
         <div class="tradingview-chartWidget-container__widget" style="height: 100%;width:70%"></div>
-    </div>
-    <script type="text/javascript" src="https://s3.tradingview.com/external-embedding/embed-widget-advanced-chart.js" async>
-  {
-  "width": "985",
-  "height": "610",
-  "symbol": "NASDAQ:AAPL",
-  "interval": "D",
-  "timezone": "Etc/UTC",
-  "theme": "dark",
-  "style": "1",
-  "locale": "en",
-  "backgroundColor": "rgba(0, 0, 0, 1)",
-  "gridColor": "rgba(0, 0, 0, 0.06)",
-  "allow_symbol_change": true,
-  "calendar": false,
-  "support_host": "https://www.tradingview.com"
-}
-    </script>
-    </div>
-    <!-- TradingView Widget END -->
-    <!-- TradingView Widget BEGIN -->
-    <div class="tradingview-wmarketWatchWidget-container" style="height: 100%; width: 70%">
+        <script type="text/javascript"
+          src="https://s3.tradingview.com/external-embedding/embed-widget-advanced-chart.js" async>
+            {
+              "width": "100%",
+                "height": "610",
+                  "symbol": "NASDAQ:AAPL",
+                    "interval": "D",
+                      "timezone": "Etc/UTC",
+                        "theme": "dark",
+                          "style": "1",
+                            "locale": "en",
+                              "backgroundColor": "rgba(0, 0, 0, 1)",
+                                "gridColor": "rgba(0, 0, 0, 0.06)",
+                                  "allow_symbol_change": true,
+                                    "calendar": false,
+                                      "support_host": "https://www.tradingview.com"
+            }
+          </script>
+      </div>
+      <!-- TradingView Widget END -->
+      <!-- TradingView Widget BEGIN -->
+      <div class="tradingview-wmarketWatchWidget-container" style="height: 100%; width: 100%">
         <div class="tradingview-marketWatchWidget-container__widget" style="height: 100%; width: 70%"></div>
-        <script type="text/javascript" src="https://s3.tradingview.com/external-embedding/embed-widget-screener.js" async>
-{
-  "width": "100%",
-  "height": 550,
-  "defaultColumn": "valuation",
-  "defaultScreen": "most_capitalized",
-  "market": "america",
-  "showToolbar": true,
-  "colorTheme": "dark",
-  "locale": "en"
-}</script>
-    </div>
-    <!-- TradingView Widget END -->
-    <!-- TradingView Widget BEGIN -->
-    <div class="big7Display" style="height: 100%; width: 70%">
+        <script type="text/javascript" src="https://s3.tradingview.com/external-embedding/embed-widget-screener.js"
+          async>
+            {
+              "width": "100%",
+                "height": 550,
+                  "defaultColumn": "valuation",
+                    "defaultScreen": "most_capitalized",
+                      "market": "america",
+                        "showToolbar": true,
+                          "colorTheme": "dark",
+                            "locale": "en"
+            }</script>
+      </div>
+      <!-- TradingView Widget END -->
+      <!-- TradingView Widget BEGIN -->
+      <div class="big7Display" style="height: 100%; width: 70%">
         <div class="big7Display" style="height: 100%; width: 70%"></div>
-        <script type="text/javascript" src="https://s3.tradingview.com/external-embedding/embed-widget-symbol-overview.js" async>
-{
-  "symbols": [
-    [
-      "Apple",
-      "AAPL|1D"
-    ],
-    [
-      "Google",
-      "GOOGL|1D"
-    ],
-    [
-      "Microsoft",
-      "MSFT|1D"
-    ],
-    [
-      "NASDAQ:TSLA|1D"
-    ],
-    [
-      "NASDAQ:NVDA|1D"
-    ],
-    [
-      "NASDAQ:META|1D"
-    ]
-  ],
-  "chartOnly": false,
-  "width": "100%",
-  "height": "100%",
-  "locale": "en",
-  "colorTheme": "dark",
-  "autosize": true,
-  "showVolume": false,
-  "showMA": false,
-  "hideDateRanges": false,
-  "hideMarketStatus": false,
-  "hideSymbolLogo": false,
-  "hideSymbolLogo": false,
-  "scalePosition": "right",
-  "scaleMode": "Normal",
-  "fontFamily": "-apple-system, BlinkMacSystemFont, Trebuchet MS, Roboto, Ubuntu, sans-serif",
-  "fontSize": "10",
-  "noTimeScale": false,
-  "valuesTracking": "1",
-  "changeMode": "price-and-percent",
-  "chartType": "area",
-  "maLineColor": "#2962FF",
-  "maLineWidth": 1,
-  "maLength": 9,
-  "lineWidth": 2,
-  "lineType": 0,
-  "dateRanges": [
-    "1d|1",
-    "1m|30",
-    "3m|60",
-    "12m|1D",
-    "60m|1W",
-    "all|1M"
-  ]
-}</script>
+        <script type="text/javascript"
+          src="https://s3.tradingview.com/external-embedding/embed-widget-symbol-overview.js" async>
+            {
+              "symbols": [
+                [
+                  "Apple",
+                  "AAPL|1D"
+                ],
+                [
+                  "Google",
+                  "GOOGL|1D"
+                ],
+                [
+                  "Microsoft",
+                  "MSFT|1D"
+                ],
+                [
+                  "NASDAQ:TSLA|1D"
+                ],
+                [
+                  "NASDAQ:NVDA|1D"
+                ],
+                [
+                  "NASDAQ:META|1D"
+                ]
+              ],
+                "chartOnly": false,
+                  "width": "100%",
+                    "height": "100%",
+                      "locale": "en",
+                        "colorTheme": "dark",
+                          "autosize": true,
+                            "showVolume": false,
+                              "showMA": false,
+                                "hideDateRanges": false,
+                                  "hideMarketStatus": false,
+                                    "hideSymbolLogo": false,
+                                      "hideSymbolLogo": false,
+                                        "scalePosition": "right",
+                                          "scaleMode": "Normal",
+                                            "fontFamily": "-apple-system, BlinkMacSystemFont, Trebuchet MS, Roboto, Ubuntu, sans-serif",
+                                              "fontSize": "10",
+                                                "noTimeScale": false,
+                                                  "valuesTracking": "1",
+                                                    "changeMode": "price-and-percent",
+                                                      "chartType": "area",
+                                                        "maLineColor": "#2962FF",
+                                                          "maLineWidth": 1,
+                                                            "maLength": 9,
+                                                              "lineWidth": 2,
+                                                                "lineType": 0,
+                                                                  "dateRanges": [
+                                                                    "1d|1",
+                                                                    "1m|30",
+                                                                    "3m|60",
+                                                                    "12m|1D",
+                                                                    "60m|1W",
+                                                                    "all|1M"
+                                                                  ]
+            }</script>
+      </div>
     </div>
-    <!-- TradingView Widget END -->
-    <!-- TradingView Widget BEGIN -->
-    <div class="tradingview-signalWidget-container">
+
+    <aside class="sidebar child">
+      <div class="tradingview-signalWidget-container">
         <div class="tradingview-signalWidget-container__widget"></div>
-        <script type="text/javascript" src="https://s3.tradingview.com/external-embedding/embed-widget-technical-analysis.js" async>
-{
-  "interval": "1m",
-  "width": 425,
-  "isTransparent": false,
-  "height": 450,
-  "symbol": "NASDAQ:CELH",
-  "showIntervalTabs": true,
-  "displayMode": "single",
-  "locale": "en",
-  "colorTheme": "dark"
-}</script>
-    </div>
-    <!-- TradingView Widget END -->
-    <!-- TradingView Widget BEGIN -->
-    <div class="tradingview-newsWidget-container">
+        <script type="text/javascript"
+          src="https://s3.tradingview.com/external-embedding/embed-widget-technical-analysis.js" async>
+            {
+              "interval": "1m",
+                "width": 400,
+                  "isTransparent": false,
+                    "height": 450,
+                      "symbol": "NASDAQ:CELH",
+                        "showIntervalTabs": true,
+                          "displayMode": "single",
+                            "locale": "en",
+                              "colorTheme": "dark"
+            }</script>
+      </div>
+      <!-- TradingView Widget END -->
+      <!-- TradingView Widget BEGIN -->
+      <div class="tradingview-newsWidget-container">
         <div class="tradingview-newsWidget-container__widget"></div>
-        <script type="text/javascript" src="https://s3.tradingview.com/external-embedding/embed-widget-timeline.js" async>
-{
-  "feedMode": "all_symbols",
-  "isTransparent": false,
-  "displayMode": "regular",
-  "width": 400,
-  "height": 550,
-  "colorTheme": "dark",
-  "locale": "en"
-}</script>
-    </div>
-    <!-- TradingView Widget END -->
-    <!-- TradingView Widget BEGIN -->
-    <div class="tradingview-econWidget-container">
+        <script type="text/javascript" src="https://s3.tradingview.com/external-embedding/embed-widget-timeline.js"
+          async>
+            {
+              "feedMode": "all_symbols",
+                "isTransparent": false,
+                  "displayMode": "regular",
+                    "width": 400,
+                      "height": 550,
+                        "colorTheme": "dark",
+                          "locale": "en"
+            }</script>
+      </div>
+      <!-- TradingView Widget END -->
+      <!-- TradingView Widget BEGIN -->
+      <div class="tradingview-econWidget-container">
         <div class="tradingview-econWidget-container__widget"></div>
         <script type="text/javascript" src="https://s3.tradingview.com/external-embedding/embed-widget-events.js" async>
-{
-  "colorTheme": "dark",
-  "isTransparent": false,
-  "width": "400",
-  "height": "550",
-  "locale": "en",
-  "importanceFilter": "-1,0,1"
-}</script>
-    </div>
-    <!-- TradingView Widget END -->
-    <footer>
-        <div class="footer-container">
-            <ul class="footer-links">
-                <li><a href="mission-statement.html">Mission Statement</a></li>
+          {
+            "colorTheme": "dark",
+              "isTransparent": false,
+                "width": "400",
+                  "height": "550",
+                    "locale": "en",
+                      "importanceFilter": "-1,0,1"
+          }</script>
+      </div>
+    </aside>
 
-            </ul>
-            <p>
-                &copy; 2024 Stock and Crypto Market Guide -
-                Brought to you by: International Bits and Sound Credit Union -
-                Powered by TradingView
-            </p>
-        </div>
-    </footer>
-    <style>
-        
-    </style>
+  </main>
+  <!-- TradingView Widget END -->
+  <!-- TradingView Widget BEGIN -->
+
+
+
+  <!-- TradingView Widget END -->
+  <footer>
+    <div class="footer-container">
+      <ul class="footer-links">
+        <li><a href="mission-statement.html">Mission Statement</a></li>
+
+      </ul>
+      <p>
+        &copy; 2024 Stock and Crypto Market Guide -
+        Brought to you by: International Bits and Sound Credit Union -
+        Powered by TradingView
+      </p>
+    </div>
+  </footer>
+  <style>
+
+  </style>
 </body>
+
 </html>
