fixed widget not displaying properly

--- a/homepage.html
+++ b/homepage.html
@@ -97,7 +97,7 @@
           async>
             {
               "width": "100%",
-                "height": 550,
+                "height": "550",
                   "defaultColumn": "valuation",
                     "defaultScreen": "most_capitalized",
                       "market": "america",
@@ -108,8 +108,8 @@
       </div>
       <!-- TradingView Widget END -->
       <!-- TradingView Widget BEGIN -->
-      <div class="big7Display" style="height: 100%; width: 70%">
-        <div class="big7Display" style="height: 100%; width: 70%"></div>
+      <div class="big7Display" >
+        <div class="big7Display" ></div>
         <script type="text/javascript"
           src="https://s3.tradingview.com/external-embedding/embed-widget-symbol-overview.js" async>
             {
@@ -137,43 +137,42 @@
                 ]
               ],
                 "chartOnly": false,
-                  "width": "100%",
-                    "height": "100%",
-                      "locale": "en",
-                        "colorTheme": "dark",
-                          "autosize": true,
-                            "showVolume": false,
-                              "showMA": false,
-                                "hideDateRanges": false,
-                                  "hideMarketStatus": false,
-                                    "hideSymbolLogo": false,
-                                      "hideSymbolLogo": false,
-                                        "scalePosition": "right",
-                                          "scaleMode": "Normal",
-                                            "fontFamily": "-apple-system, BlinkMacSystemFont, Trebuchet MS, Roboto, Ubuntu, sans-serif",
-                                              "fontSize": "10",
-                                                "noTimeScale": false,
-                                                  "valuesTracking": "1",
-                                                    "changeMode": "price-and-percent",
-                                                      "chartType": "area",
-                                                        "maLineColor": "#2962FF",
-                                                          "maLineWidth": 1,
-                                                            "maLength": 9,
-                                                              "lineWidth": 2,
-                                                                "lineType": 0,
-                                                                  "dateRanges": [
-                                                                    "1d|1",
-                                                                    "1m|30",
-                                                                    "3m|60",
-                                                                    "12m|1D",
-                                                                    "60m|1W",
-                                                                    "all|1M"
-                                                                  ]
+                "width": "100%",
+                "locale": "en",
+                "colorTheme": "dark",
+                "autosize": true,
+                "showVolume": false,
+                "showMA": false,
+                "hideDateRanges": false,
+                "hideMarketStatus": false,
+                "hideSymbolLogo": false,
+                "hideSymbolLogo": false,
+                "scalePosition": "right",
+                "scaleMode": "Normal",
+                "fontFamily": "-apple-system, BlinkMacSystemFont, Trebuchet MS, Roboto, Ubuntu, sans-serif",
+                "fontSize": "10",
+                "noTimeScale": false,
+                "valuesTracking": "1",
+                "changeMode": "price-and-percent",
+                "chartType": "area",
+                "maLineColor": "#2962FF",
+                "maLineWidth": 1,
+                "maLength": 9,
+                "lineWidth": 2,
+                "lineType": 0,
+                "dateRanges": [
+                  "1d|1",
+                  "1m|30",
+                  "3m|60",
+                  "12m|1D",
+                  "60m|1W",
+                  "all|1M"
+                ]
             }</script>
       </div>
     </div>
 
-    <aside class="sidebar child">
+    <aside class="child">
       <div class="tradingview-signalWidget-container">
         <div class="tradingview-signalWidget-container__widget"></div>
         <script type="text/javascript"
